# Low-Code-RL-Teaching-Studio

./: .gitignore  README.md
backend/: README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: routes.py
backend/app/repositories/: experiment_store.py
backend/app/rl/: __init__.py  training_artifacts.py
backend/app/rl/algorithms/: __init__.py  dqn.py  q_learning.py  reinforce.py  sarsa.py
backend/app/rl/envs/: __init__.py  base.py  cliffwalking.py  factory.py  frozenlake.py  gridworld.py  windygridworld.py
backend/app/schemas/: __init__.py  experiment.py
backend/app/services/: analytics.py  assignments.py  benchmarks.py  catalog.py  reporting.py  training_service.py
backend/data/: experiments.db
backend/tests/: test_training_service.py
backend/tmp_eval_data/: experiments.db
backend/tmp_eval_tune/: experiments.db
data/: experiments.db
docs/: architecture.md  技术细节说明.md  论文与代码不一致清单.md  项目说明文档.md
frontend/: package-lock.json  package.json
frontend/src/: App.vue  App_head.tmp  api.ts  style.css  types.ts
frontend/src/components/: ComparisonChart.vue  MetricChart.vue  PolicyGrid.vue  TraceReplayGrid.vue
